# streamlit_test

./: .env  README.md  docker-compose.yaml
app/: Dockerfile  data_analysis.py  file1.py  pyproject.toml
